post request for volatility sliding bar

--- a/setup/data/math_optimize.ipynb
+++ b/setup/data/math_optimize.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -895,15 +895,15 @@
        "[504 rows x 9 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "close_ls = []\n",
-    "date_ = df['datetime']\n",
     "for df in df_list:\n",
+    "    date_ = df['datetime']\n",
     "    close_ls.append(df['close'])\n",
     "stocks = pd.concat(close_ls,axis=1)\n",
     "stocks.columns = ['VTI','VEA', 'VWO', 'VNQ', 'XLE', 'BND', 'SCHP', 'VTEB', 'VIG']\n",
@@ -916,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -950,10 +950,22 @@
        "      <th>VTEB</th>\n",
        "      <th>VIG</th>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>1496725200000</th>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -965,7 +977,7 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>1496811600000</th>\n",
        "      <td>0.001120</td>\n",
        "      <td>-0.000716</td>\n",
        "      <td>-0.000728</td>\n",
@@ -977,7 +989,7 @@
        "      <td>0.001391</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>1496898000000</th>\n",
        "      <td>0.001757</td>\n",
        "      <td>-0.001433</td>\n",
        "      <td>0.001941</td>\n",
@@ -989,7 +1001,7 @@
        "      <td>0.000535</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>1496984400000</th>\n",
        "      <td>-0.000798</td>\n",
        "      <td>-0.003591</td>\n",
        "      <td>-0.006811</td>\n",
@@ -1001,7 +1013,7 @@
        "      <td>0.001922</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>1497243600000</th>\n",
        "      <td>-0.000160</td>\n",
        "      <td>-0.003122</td>\n",
        "      <td>-0.003668</td>\n",
@@ -1017,22 +1029,24 @@
        "</div>"
       ],
       "text/plain": [
-       "        VTI       VEA       VWO       VNQ       XLE       BND      SCHP  \\\n",
-       "0       NaN       NaN       NaN       NaN       NaN       NaN       NaN   \n",
-       "1  0.001120 -0.000716 -0.000728  0.006988 -0.014195 -0.001341 -0.003416   \n",
-       "2  0.001757 -0.001433  0.001941 -0.002404 -0.002925 -0.000732 -0.000180   \n",
-       "3 -0.000798 -0.003591 -0.006811  0.006956  0.023767 -0.000855 -0.001622   \n",
-       "4 -0.000160 -0.003122 -0.003668  0.008924  0.007051 -0.000244 -0.001264   \n",
+       "                    VTI       VEA       VWO       VNQ       XLE       BND  \\\n",
+       "date                                                                        \n",
+       "1496725200000       NaN       NaN       NaN       NaN       NaN       NaN   \n",
+       "1496811600000  0.001120 -0.000716 -0.000728  0.006988 -0.014195 -0.001341   \n",
+       "1496898000000  0.001757 -0.001433  0.001941 -0.002404 -0.002925 -0.000732   \n",
+       "1496984400000 -0.000798 -0.003591 -0.006811  0.006956  0.023767 -0.000855   \n",
+       "1497243600000 -0.000160 -0.003122 -0.003668  0.008924  0.007051 -0.000244   \n",
        "\n",
-       "       VTEB       VIG  \n",
-       "0       NaN       NaN  \n",
-       "1 -0.000775  0.001391  \n",
-       "2 -0.001164  0.000535  \n",
-       "3 -0.001165  0.001922  \n",
-       "4 -0.000777  0.000746  "
+       "                   SCHP      VTEB       VIG  \n",
+       "date                                         \n",
+       "1496725200000       NaN       NaN       NaN  \n",
+       "1496811600000 -0.003416 -0.000775  0.001391  \n",
+       "1496898000000 -0.000180 -0.001164  0.000535  \n",
+       "1496984400000 -0.001622 -0.001165  0.001922  \n",
+       "1497243600000 -0.001264 -0.000777  0.000746  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1044,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1066,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1077,17 +1091,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.05022342, 0.02950001, 0.01541577, 0.01003049, 0.0224378 ,\n",
-       "       0.11671432, 0.19410713, 0.28482485, 0.27674621])"
+       "array([0.12120078, 0.01516103, 0.03371361, 0.05658794, 0.00964877,\n",
+       "       0.09420152, 0.27796014, 0.02483776, 0.36668843])"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1098,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1112,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1122,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1132,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1142,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1151,7 +1165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1160,7 +1174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1169,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1178,7 +1192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1198,7 +1212,7 @@
        "       1.00000000e-01])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1209,7 +1223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1220,7 +1234,7 @@
        "       1.00000000e-01])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1231,7 +1245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1240,7 +1254,7 @@
        "array([0.06154364, 0.1210175 , 0.5085516 ])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1251,7 +1265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1260,7 +1274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1270,7 +1284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1288,7 +1302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 25,
    "metadata": {
     "scrolled": true
    },
@@ -1296,10 +1310,10 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x12016c8d0>]"
+       "[<matplotlib.lines.Line2D at 0x1224f4fd0>]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1328,6 +1342,13 @@
     "# Add frontier line\n",
     "plt.plot(frontier_volatility,frontier_y,'g--',linewidth=3)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
