--- a/setup/data/allo_chart.ipynb
+++ b/setup/data/allo_chart.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,135 +26,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'allocations': {'BND': 0.10000000000000016,\n",
-       "   'SCHP': 0.0,\n",
-       "   'VEA': 0.4999999999999999,\n",
-       "   'VIG': 4.8352887737988165e-17,\n",
-       "   'VNQ': 0.25203691884061163,\n",
-       "   'VTEB': 0.0,\n",
-       "   'VTI': 0.0,\n",
-       "   'VWO': 0.14796308115938853,\n",
-       "   'XLE': 2.4801545294792605e-17},\n",
-       "  'return': -1.277767536731258e-15,\n",
-       "  'sharpe': -1.2483966885781115e-14,\n",
-       "  'volatility': 0.10235268552230774},\n",
-       " {'allocations': {'BND': 1.0408340855860843e-17,\n",
-       "   'SCHP': 1.0408340855860843e-17,\n",
-       "   'VEA': 0.4976142082958132,\n",
-       "   'VIG': 0.0,\n",
-       "   'VNQ': 0.3712927155148389,\n",
-       "   'VTEB': 0.10000000000000005,\n",
-       "   'VTI': 0.031093076189347854,\n",
-       "   'VWO': 0.0,\n",
-       "   'XLE': 0.0},\n",
-       "  'return': 0.008888888891895317,\n",
-       "  'sharpe': 0.09083301452692717,\n",
-       "  'volatility': 0.09785967071763575},\n",
-       " {'allocations': {'BND': 2.482822974991805e-17,\n",
-       "   'SCHP': 1.3444106938820255e-16,\n",
-       "   'VEA': 0.4006174535984722,\n",
-       "   'VIG': 2.3852447794681098e-18,\n",
-       "   'VNQ': 0.37134811542916374,\n",
-       "   'VTEB': 0.09999999999999988,\n",
-       "   'VTI': 0.1280344309723641,\n",
-       "   'VWO': 3.67544536472586e-17,\n",
-       "   'XLE': 2.168404344971009e-18},\n",
-       "  'return': 0.017777777779965035,\n",
-       "  'sharpe': 0.17924152531157,\n",
-       "  'volatility': 0.09918336584707407},\n",
-       " {'allocations': {'BND': 1.2289431625123193e-16,\n",
-       "   'SCHP': 1.6067876196235176e-16,\n",
-       "   'VEA': 0.3067710824245142,\n",
-       "   'VIG': 0.0,\n",
-       "   'VNQ': 0.3644090470194833,\n",
-       "   'VTEB': 0.09999999999999974,\n",
-       "   'VTI': 0.22881987055600253,\n",
-       "   'VWO': 7.085261197192771e-17,\n",
-       "   'XLE': 0.0},\n",
-       "  'return': 0.02666666666653035,\n",
-       "  'sharpe': 0.26401907012319603,\n",
-       "  'volatility': 0.10100280504013291},\n",
-       " {'allocations': {'BND': 0.0,\n",
-       "   'SCHP': 8.901299836105991e-17,\n",
-       "   'VEA': 0.21211590739508307,\n",
-       "   'VIG': 1.5070410197548512e-17,\n",
-       "   'VNQ': 0.35926568148101196,\n",
-       "   'VTEB': 0.10000000000000003,\n",
-       "   'VTI': 0.32861841112390505,\n",
-       "   'VWO': 0.0,\n",
-       "   'XLE': 0.0},\n",
-       "  'return': 0.03555555555622211,\n",
-       "  'sharpe': 0.34421363959698076,\n",
-       "  'volatility': 0.10329502223634134},\n",
-       " {'allocations': {'BND': 0.0,\n",
-       "   'SCHP': 1.0408340855860843e-17,\n",
-       "   'VEA': 0.11887438855811125,\n",
-       "   'VIG': 0.0,\n",
-       "   'VNQ': 0.35098372253423227,\n",
-       "   'VTEB': 0.10000000000000009,\n",
-       "   'VTI': 0.43014188890765653,\n",
-       "   'VWO': 3.2146594414195206e-17,\n",
-       "   'XLE': 0.0},\n",
-       "  'return': 0.0444444444386985,\n",
-       "  'sharpe': 0.41916396376451576,\n",
-       "  'volatility': 0.10603116746855455},\n",
-       " {'allocations': {'BND': 0.0,\n",
-       "   'SCHP': 0.0,\n",
-       "   'VEA': 3.892932723298098e-17,\n",
-       "   'VIG': 0.0001948549768645008,\n",
-       "   'VNQ': 0.4000000000000001,\n",
-       "   'VTEB': 0.09980514502313541,\n",
-       "   'VTI': 0.5,\n",
-       "   'VWO': 0.0,\n",
-       "   'XLE': 9.255794103570625e-17},\n",
-       "  'return': 0.05333333333334721,\n",
-       "  'sharpe': 0.48763621456631484,\n",
-       "  'volatility': 0.10937114951722741},\n",
-       " {'allocations': {'BND': 1.8677758868399975e-17,\n",
-       "   'SCHP': 2.929238516065518e-14,\n",
-       "   'VEA': 3.1447416777087313e-14,\n",
-       "   'VIG': 0.10430646387562903,\n",
-       "   'VNQ': 0.39569353612435154,\n",
-       "   'VTEB': 6.236499379481332e-18,\n",
-       "   'VTI': 0.5,\n",
-       "   'VWO': 7.74039657197296e-17,\n",
-       "   'XLE': 0.0},\n",
-       "  'return': 0.06179890909300382,\n",
-       "  'sharpe': 0.5105961835210284,\n",
-       "  'volatility': 0.12103284569587601},\n",
-       " {'allocations': {'BND': 2.534390943159722e-14,\n",
-       "   'SCHP': 1.1096809517203457e-19,\n",
-       "   'VEA': 1.3089801121528578e-13,\n",
-       "   'VIG': 0.1540275756755189,\n",
-       "   'VNQ': 0.3459724243241491,\n",
-       "   'VTEB': 2.6134667463198196e-13,\n",
-       "   'VTI': 0.5,\n",
-       "   'VWO': 8.87883962811483e-19,\n",
-       "   'XLE': 2.9824883896825696e-22},\n",
-       "  'return': 0.06474615746439182,\n",
-       "  'sharpe': 0.5333371739941757,\n",
-       "  'volatility': 0.12139817102848129},\n",
-       " {'allocations': {'BND': 1.2211568505617938e-16,\n",
-       "   'SCHP': 1.745578096439442e-17,\n",
-       "   'VEA': 3.34637246112311e-13,\n",
-       "   'VIG': 0.19387908262405226,\n",
-       "   'VNQ': 0.30612091737591196,\n",
-       "   'VTEB': 1.621438488620912e-14,\n",
-       "   'VTI': 0.5,\n",
-       "   'VWO': 9.886677609005747e-18,\n",
-       "   'XLE': 4.369810666591568e-13},\n",
-       "  'return': 0.06710837915854576,\n",
-       "  'sharpe': 0.5503425975131894,\n",
-       "  'volatility': 0.12193927830007281}]"
+       "[{'allocations': [{'ticker': 'VTI', 'weight': 0.22881987055600253},\n",
+       "   {'ticker': 'VEA', 'weight': 0.3067710824245142},\n",
+       "   {'ticker': 'VWO', 'weight': 7.085261197192771e-17},\n",
+       "   {'ticker': 'VNQ', 'weight': 0.3644090470194833},\n",
+       "   {'ticker': 'XLE', 'weight': 0.0},\n",
+       "   {'ticker': 'BND', 'weight': 1.2289431625123193e-16},\n",
+       "   {'ticker': 'SCHP', 'weight': 1.6067876196235176e-16},\n",
+       "   {'ticker': 'VTEB', 'weight': 0.09999999999999974},\n",
+       "   {'ticker': 'VIG', 'weight': 0.0}]},\n",
+       " {'info': [{'volatility': 0.10100280504013291},\n",
+       "   {'return': 0.02666666666653035},\n",
+       "   {'sharpe': 0.26401907012319603}]}]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
